# DeepEcoHab

./: AGENTS.md  README.md  pyproject.toml  tatus  total_chasing_events_per_day.csv
.tmp/: daily_chasing_combo.csv  daily_chasing_with_animals_by_chaser.csv  stacked_summary_debug.csv
.tmp/speed-dashboard/speed_dashboard_2026-06-21/: config.toml
My_graphs/: initiate_chased.ipynb  poster_polar_plot.ipynb  speed of animals.ipynb
deepecohab/: __init__.py  __main__.py
deepecohab/analysis/: __init__.py  antenna_analysis.py
deepecohab/antenna_analysis/: activity.py  chasings.py
deepecohab/app/: app.py  dash_layouts.py
deepecohab/app/assets/: sidebar.js  style.css
deepecohab/app/page_layouts/: analysis_layout.py  cohort_dashboard_layout.py  group_dashboard_layout.py  home_layout.py
deepecohab/app/pages/: analysis.py  cohort_dashboard.py  group_dashboard.py  home.py
deepecohab/core/: create_data_structure.py  create_project.py
deepecohab/dash/: dash_layouts.py  dash_plotting.py  dashboard.py  plot_factory.py
deepecohab/plotting/: dash_plotting.py  plot_catalog.py  plot_factory.py
deepecohab/utils/: auxfun.py  auxfun_dashboard.py  auxfun_plots.py  cache_config.py  config_templates.py
examples/: example_load_existing_project.ipynb  example_notebook.ipynb  example_notebook_custom_layout.ipynb  example_notebook_field.ipynb
examples/test_data/test_2025-12-18/: config.toml
examples/test_data/test_2025-12-29/: config.toml
gui_launcher/: Main_menu_GUI_launcher.ipynb  Old_EH_board_new_firmware_2026.hex
gui_launcher/DeepEcoHAB_dependencies/: main_menu_config.json
gui_launcher/DeepEcoHAB_dependencies/_launcher_cache/: new_board_launched.py  (+5 more)
scripts/: poster_polar_plot.py  total_chasing_events_per_day.py
tests/: test_animal_speed.py  test_chasing_trains.py
(+36 files in other folders)
