[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepecohab"
version = "0.4.2.4"
description = "EcoHab with some machine learning"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Konrad Danielewski", email = "k.danielewski@nencki.edu.pl"},
    {name = "Ula Włodkowska", email = "u.wlodkowska@nencki.edu.pl"},
]
keywords = ["neuroscience", "ecology", "dash", "data-visualization", "data-analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "dash[diskcache]",
    "dash-bootstrap-components",
    "ipykernel",
    "kaleido",
    "nbformat",
    "networkx",
    "numpy",
    "openskill",
    "plotly",
    "polars",
    "scipy",
    "toml",
    "tzlocal",
]

[project.urls]
Homepage = "https://github.com/KonradDanielewski/DeepEcoHab"
Issues = "https://github.com/KonradDanielewski/DeepEcoHab/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["deepecohab*"]
namespaces = true

[tool.setuptools.package-data]
"deepecohab.dash.assets" = ["style.css"]

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "ignore"
possibly-missing-attribute = "error"
possibly-missing-import = "error"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

docstring-code-format = true

[dependency-groups]
dev = [
    "ty>=0.0.16",
]

